RESOLVED FIXED23105
canvas setFillColor function ignores alpha argument
https://bugs.webkit.org/show_bug.cgi?id=23105
Summary canvas setFillColor function ignores alpha argument
Darin Adler
Reported 2009-01-04 10:28:30 PST
I noticed this while looking at unused argument warnings.
Attachments
patch (15.17 KB, patch)
2009-01-04 21:25 PST, Darin Adler
oliver: review+
Darin Adler
Comment 1 2009-01-04 21:25:20 PST
Oliver Hunt
Comment 2 2009-01-04 23:22:52 PST
Comment on attachment 26423 [details] patch r=me, that's hilarious
Darin Adler
Comment 3 2009-01-04 23:25:45 PST
Simon Fraser (smfr)
Comment 4 2009-01-05 12:04:43 PST
fast/canvas/set-colors.html is failing now: <http://build.webkit.org/results/trunk-mac-ppc-pixel/771/results.html>
Darin Adler
Comment 5 2009-01-05 13:09:24 PST
(In reply to comment #4) > fast/canvas/set-colors.html is failing now: > <http://build.webkit.org/results/trunk-mac-ppc-pixel/771/results.html> There are two kinds of failures there: 1) The CMYK conversion seems to be coming out slightly differently. I can either remove the CMYK test entirely or choose values for CMYK that give more consistent results. 2) The very thing I was trying to fix seems to still be broken on Tiger! I have no idea what to do about (2).
Darin Adler
Comment 6 2009-01-05 13:09:48 PST
I presume both of these failures are Tiger-only, because the tests are passing for me on Leopard machines.
Simon Fraser (smfr)
Comment 7 2009-01-05 13:15:03 PST
I saw a failure on my Leopard machine. Does it depend on the screen color profile?
Simon Fraser (smfr)
Comment 8 2009-01-05 13:15:47 PST
Related to bug 22300?
Darin Adler
Comment 9 2009-01-05 13:17:09 PST
(In reply to comment #7) > I saw a failure on my Leopard machine. The same 5 failures as on the buildbot? > Does it depend on the screen color profile? It shouldn't. Perhaps it does. I need to do something quick to get the buildbot green again. The big mystery is the setFillColor case, since that's the bug I was actually fixing!
Darin Adler
Comment 10 2009-01-05 13:25:40 PST
On my computer I am seeing the CMYK test failures both in Safari and in DumpRenderTree. And I am seeing the setFillColor failure, but only in DumpRenderTree.
Darin Adler
Comment 11 2009-01-05 13:34:23 PST
All figured out. All fixed now. http://trac.webkit.org/changeset/39612
Note You need to log in before you can comment on or make changes to this bug.