WebCore:

2009-01-04  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Bug 23105: canvas setFillColor function ignores alpha argument
        https://bugs.webkit.org/show_bug.cgi?id=23105

        Test: fast/canvas/set-colors.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setFillColor): Pass alpha value through instead
        of ignoring it and always passing 1.

        * html/CanvasStyle.cpp:
        (WebCore::CanvasStyle::applyStrokeColor): Fix spelling of transparent in comments.
        (WebCore::CanvasStyle::applyFillColor): Ditto.

LayoutTests:

2009-01-04  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Bug 23105: canvas setFillColor function ignores alpha argument
        https://bugs.webkit.org/show_bug.cgi?id=23105

        * fast/canvas/resources/set-colors.js: Added.
        * fast/canvas/set-colors-expected.txt: Added.
        * fast/canvas/set-colors.html: Added.



Canonical link: https://commits.webkit.org/31794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39595 268f45cc-cd09-0410-ab3c-d52691b4dbfc